Fixed partners table so that logos are not enormous - gave a fixed height. Also added alignment for the logos in the table in the _custom.scss file

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,11 @@
 // Custom styling
 // 
 // Include the file _sass/_custom.scss to your site to add custom styling
+table td {
+  vertical-align: middle;
+}
+
+table td img {
+  display: block;
+  margin: auto;
+}
